<resources>
    <string name="app_name">addProductRet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //login
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="dominName">Your Domain</string>
    <string name="login_title">Login</string>


    //minActivity
    <string name="main_name">Quick Add Products</string>
    <string name="picBtnText">Camera</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="model">Model</string>
    <string name="addPro">Add Product</string>

</resources>