<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbackground"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loginBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapelogin"
        android:clickable="true"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/ic_baseline_login_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#28CDDC39"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    app:srcCompat="@drawable/camera2" />

                <Button
                    android:id="@+id/picBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/shapelogin"
                    android:text="@string/picBtnText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPqun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPmod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/model"
                    android:inputType="text"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAddP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shapelogin"
                android:text="@string/addPro" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>