<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3BEDE5E5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/shapeemail"
                android:theme="@style/Base.CardView"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/DominTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dominName"
                    android:textColor="#090808"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/DominName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="lightg.ir"
                    android:textColor="#0E0D0D"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="by Valikh"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#1B0505"
                android:textSelectHandle="@color/cardview_shadow_end_color" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:isScrollContainer="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapeemail"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shapelogin"
                android:shadowColor="#131212"
                android:text="@string/loginButton"
                app:shapeAppearance="@style/CardView" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>